--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <!-- Bolo de Chocolate -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/MTeBtuAOcldRYVSu.jpg" alt="Bolo de Chocolate" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/PRdTFbGPPJRfxGUn.png" alt="Bolo de Chocolate" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Chocolate</h3>
@@ -495,7 +495,7 @@
         <!-- Bolo de Limão -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/TYGUeSXUuPlqzaaX.jpg" alt="Bolo de Limão" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/nTMHyturkMHdoCAC.jpg" alt="Bolo de Limão" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Limão</h3>
@@ -531,7 +531,7 @@
         <!-- Bolo Mesclado -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/WDivBUGBkPgPCQQO.jpg" alt="Bolo Mesclado" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/OueHUtJwlOElMHWm.jpg" alt="Bolo Mesclado" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo Mesclado</h3>
@@ -543,7 +543,7 @@
         <!-- Bolo de Amendoim -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/HvxqiRCeztySssUZ.jpg" alt="Bolo de Amendoim" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/GzjpPKjJMHZsTvvg.jpg" alt="Bolo de Amendoim" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Amendoim</h3>
@@ -621,6 +621,10 @@
     <div class="footer-bottom">
         <p>© 2026 - CASA MONDEGO | Confeitaria Artesanal em Curitiba</p>
     </div>
+</footer>
+
+</body>
+</html>
 </footer>
 
 </body>
