--- a/index.html
+++ b/index.html
@@ -172,6 +172,41 @@
         border-radius: 5px;
     }
 
+    /* Media Query para Dispositivos Móveis - Cabeçalho Não-Flutuante */
+    @media (max-width: 768px) {
+        header.header-bar {
+            position: relative;
+            height: auto;
+            padding: 15px 5%;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .branding {
+            width: 100%;
+            justify-content: center;
+            height: auto;
+            margin-bottom: 15px;
+        }
+
+        .logo-img {
+            height: 100px;
+        }
+
+        .main-nav {
+            width: 100%;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .main-nav li a {
+            font-size: 0.85rem;
+            padding: 8px 12px;
+            letter-spacing: 0.8px;
+        }
+    }
+
     /* Hero Section */
     .hero-section {
         background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/MTeBtuAOcldRYVSu.jpg');
@@ -621,10 +656,6 @@
     <div class="footer-bottom">
         <p>© 2026 - CASA MONDEGO | Confeitaria Artesanal em Curitiba</p>
     </div>
-</footer>
-
-</body>
-</html>
 </footer>
 
 </body>
