--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
     }
 
-    /* Header Unificado e Horizontal - Logo Ampliada em +20% */
+    /* Header Unificado e Horizontal */
     header.header-bar {
         background-color: var(--black-bg) !important;
         border-bottom: 2px solid var(--gold-primary);
@@ -127,7 +127,7 @@
         top: 0;
         z-index: 1000;
         box-sizing: border-box;
-        height: 170px; /* Aumentado para acomodar a logo ampliada */
+        height: 170px;
     }
 
     .branding {
@@ -138,7 +138,7 @@
     }
 
     .logo-img {
-        height: 145px; /* Aumentado em ~20% em relação aos 120px anteriores */
+        height: 145px;
         width: auto;
         display: block;
         transition: transform 0.3s ease;
@@ -146,7 +146,7 @@
 
     .logo-img:hover { transform: scale(1.05); }
 
-    /* Navegação Alinhada à Direita - Menu Maior */
+    /* Navegação Alinhada à Direita */
     .main-nav {
         display: flex;
         list-style: none;
@@ -170,44 +170,6 @@
         color: var(--text-light) !important;
         background-color: rgba(212, 175, 55, 0.15);
         border-radius: 5px;
-    }
-
-    /* Media Query para Dispositivos Móveis - Cabeçalho Não-Flutuante */
-    @media (max-width: 768px) {
-        header.header-bar {
-            position: relative;
-            height: auto;
-            padding: 15px 5%;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .branding {
-            width: 100%;
-            justify-content: center;
-            height: auto;
-            margin-bottom: 15px;
-        }
-
-        .logo-img {
-            height: 100px;
-        }
-
-        .main-nav {
-            width: 100%;
-            justify-content: center;
-            flex-wrap: nowrap; /* Garante uma única linha */
-            gap: 5px; /* Reduz o espaço entre itens */
-            overflow-x: auto; /* Permite scroll se for muito pequeno */
-            -webkit-overflow-scrolling: touch;
-        }
-
-        .main-nav li a {
-            font-size: 0.7rem; /* Reduz o tamanho da fonte */
-            padding: 6px 8px; /* Reduz o preenchimento */
-            letter-spacing: 0.5px;
-            white-space: nowrap; /* Impede quebra de texto no item */
-        }
     }
 
     /* Hero Section */
@@ -349,89 +311,66 @@
         text-align: left;
     }
 
-    .footer-section h4 {
-        color: var(--gold-primary);
-        margin-bottom: 20px;
-        font-size: 1.2rem;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-    }
-
-    .footer-section p, .footer-section a {
-        color: #ccc;
-        text-decoration: none;
-        line-height: 1.8;
-        font-size: 0.95rem;
-        display: block;
-        margin-bottom: 10px;
-    }
-
-    .footer-section a:hover { color: var(--gold-primary); }
+    .footer-section h4 { color: var(--gold-primary); margin-bottom: 20px; font-size: 1.2rem; }
+    .footer-section p { font-size: 0.9rem; line-height: 1.6; margin-bottom: 10px; }
 
     .footer-logo-video {
         width: 100%;
         max-width: 280px;
         height: auto;
         border-radius: 10px;
-        margin: 0 auto 25px;
         display: block;
+        margin: 0 auto 20px;
     }
 
-    .contact-link { display: flex !important; align-items: center; gap: 10px; }
-    .contact-icon { width: 18px; height: 18px; fill: var(--gold-primary); flex-shrink: 0; }
-
-    .map-container {
-        width: 100%;
-        height: 200px;
-        margin-top: 15px;
-        border-radius: 10px;
-        overflow: hidden;
-        border: 1px solid #333;
+    .contact-link {
+        color: #888;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 10px;
+        transition: color 0.3s ease;
     }
 
-    .social-icons { display: flex; gap: 15px; margin-top: 15px; align-items: center; }
-    .social-icons a { display: block; width: 40px; height: 40px; transition: transform 0.3s ease; }
-    .social-icons a:hover { transform: translateY(-5px); }
-    .social-icons img { width: 100%; height: 100%; object-fit: contain; }
+    .contact-link:hover { color: var(--gold-primary); }
 
-    .footer-bottom { border-top: 1px solid #222; padding-top: 40px; font-size: 0.85rem; letter-spacing: 1px; }
+    .contact-link svg { width: 20px; height: 20px; fill: var(--gold-primary); }
 
-    /* Responsividade do Header */
-    @media (max-width: 992px) {
-        header.header-bar {
-            flex-direction: column;
-            padding: 15px 20px;
-            height: auto;
-        }
-        .logo-img {
-            height: 120px;
-            margin-bottom: 15px;
-        }
-        .main-nav {
-            justify-content: center;
-            width: 100%;
-            gap: 10px;
-        }
-        .main-nav li a {
-            padding: 8px 12px;
-            font-size: 0.9rem;
-        }
-    }
+    .social-links { display: flex; gap: 15px; margin-top: 20px; }
+    .social-links a svg { width: 25px; height: 25px; fill: #888; transition: fill 0.3s ease; }
+    .social-links a:hover svg { fill: var(--gold-primary); }
 
+    .map-container { width: 100%; height: 180px; border-radius: 10px; overflow: hidden; margin-top: 15px; border: 1px solid #333; }
+
+    /* Ajustes Responsivos para Celular */
     @media (max-width: 768px) {
-        .hero-section h1 { font-size: 2.5rem; }
-        .main-nav {
-            flex-wrap: wrap;
-            gap: 5px;
+        header.header-bar { 
+            position: relative !important; /* Remove o flutuante no celular */
+            height: auto; 
+            padding: 15px 10px; 
+            flex-direction: column; 
+            gap: 15px; 
         }
-        .footer-grid { text-align: center; }
-        .social-icons { justify-content: center; }
-        .contact-link { justify-content: center; }
-        .footer-logo-video { max-width: 240px; margin: 0 auto 20px; }
+        .logo-img { height: 90px; }
+        .main-nav { 
+            flex-wrap: nowrap; /* Garante uma única linha */
+            justify-content: center; 
+            gap: 5px; 
+            width: 100%;
+            overflow-x: auto; /* Permite scroll horizontal se necessário, mas tenta manter em uma linha */
+        }
+        .main-nav li a { 
+            font-size: 0.75rem; /* Diminui o tamanho da fonte para caber em uma linha */
+            padding: 5px 8px; 
+            letter-spacing: 0.5px;
+        }
+        .hero-section h1 { font-size: 2.2rem; }
+        .hero-section p { font-size: 1.1rem; }
     }
 </style>
 
-<link rel='stylesheet' id='dt-web-fonts-css' href='https://fonts.googleapis.com/css?family=Roboto:400,500,600,700%7CCourgette:400,600,700%7CMontserrat:300,400,600,700' type='text/css' media='all' />
+<link rel='stylesheet' id='google-fonts-css' href='https://fonts.googleapis.com/css?family=Montserrat%3A400%2C700%7CCourgette&display=swap' type='text/css' media='all' />
 </head>
 
 <body>
@@ -521,7 +460,7 @@
         <!-- Bolo de Cenoura -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="cenoura.jpg" alt="Bolo de Cenoura" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663297933797/vVPrthhQxhwSdbwg.jpg" alt="Bolo de Cenoura" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Cenoura</h3>
@@ -557,7 +496,7 @@
         <!-- Bolo Red Velvet -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="Bolo-redvelvet.jpg" alt="Bolo Red Velvet" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663297933797/DFRIuwpDYgfEubbV.jpg" alt="Bolo Red Velvet" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo Red Velvet</h3>
@@ -605,7 +544,7 @@
         <!-- Bolo Formigueiro -->
         <div class="bolo-card">
             <div class="bolo-img-container">
-                <img src="Bolo-formigueiro-1024x683(1).jpg" alt="Bolo Formigueiro" class="bolo-img" loading="lazy">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663297933797/wyULhHENHNrOLGJF.jpg" alt="Bolo Formigueiro" class="bolo-img" loading="lazy">
             </div>
             <div class="bolo-info">
                 <h3>Bolo Formigueiro</h3>
@@ -643,26 +582,26 @@
         <div class="footer-section">
             <h4>Fale Conosco</h4>
             <a href="https://wa.me/5541991755009" target="_blank" class="contact-link">
-                <svg class="contact-icon" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-5.5-2.8-23.2-8.5-44.2-27.1-16.4-14.6-27.4-32.7-30.6-38.1-3.2-5.5-.3-8.5 2.5-11.2 2.5-2.5 5.5-6.5 8.3-9.7 2.8-3.3 3.7-5.5 5.5-9.2 1.9-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 13.2 5.7 23.5 9.2 31.6 11.8 13.9 4.4 26.5 3.8 36.5 2.3 11.1-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
-                WhatsApp: (41) 99175-5009
+                <svg viewBox="0 0 448 512"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-5.5-2.8-23.2-8.5-44.2-27.1-16.4-14.6-27.4-32.7-30.6-38.1-3.2-5.5-.3-8.5 2.5-11.2 2.5-2.5 5.5-6.5 8.3-9.7 2.8-3.3 3.7-5.5 5.5-9.2 1.9-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 13.2 5.7 23.5 9.2 31.6 11.8 13.9 4.4 26.5 3.8 36.5 2.3 11.1-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
+                (41) 99175-5009
             </a>
             <a href="mailto:contato@casamondego.com.br" class="contact-link">
-                <svg class="contact-icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
-                E-mail: contato@casamondego.com.br
+                <svg viewBox="0 0 512 512"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+                contato@casamondego.com.br
             </a>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/casa.mondego/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/132px-Instagram_logo_2016.svg.png" alt="Instagram"></a>
-                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1200px-Facebook_Logo_%282019%29.png" alt="Facebook"></a>
+            <div class="social-links">
+                <a href="https://www.instagram.com/casa.mondego/" target="_blank">
+                    <svg viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+                </a>
+                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank">
+                    <svg viewBox="0 0 320 512"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/></svg>
+                </a>
             </div>
         </div>
     </div>
-    <div class="footer-bottom">
-        <p>© 2026 - CASA MONDEGO | Confeitaria Artesanal em Curitiba</p>
+    <div style="border-top: 1px solid #333; padding-top: 20px; font-size: 0.8rem;">
+        <p>&copy; 2026 Casa Mondego - Todos os direitos reservados.</p>
     </div>
-</footer>
-
-</body>
-</html>
 </footer>
 
 </body>
