--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         --text-dark: #333333;
         --text-light: #ffffff;
         --whatsapp-green: #25D366;
+        --instagram-color: #E4405F;
+        --facebook-color: #1877F2;
     }
 
     body {
@@ -338,32 +340,43 @@
     .contact-link svg { width: 20px; height: 20px; fill: var(--gold-primary); }
 
     .social-links { display: flex; gap: 15px; margin-top: 20px; }
-    .social-links a svg { width: 25px; height: 25px; fill: #888; transition: fill 0.3s ease; }
-    .social-links a:hover svg { fill: var(--gold-primary); }
+    
+    /* Ícones Sociais Coloridos */
+    .social-links a svg { width: 25px; height: 25px; transition: transform 0.3s ease; }
+    .social-links a:hover svg { transform: scale(1.2); }
+    
+    .social-instagram svg { fill: var(--instagram-color); }
+    .social-facebook svg { fill: var(--facebook-color); }
 
     .map-container { width: 100%; height: 180px; border-radius: 10px; overflow: hidden; margin-top: 15px; border: 1px solid #333; }
 
     /* Ajustes Responsivos para Celular */
     @media (max-width: 768px) {
         header.header-bar { 
-            position: relative !important; /* Remove o flutuante no celular */
+            position: relative !important; 
             height: auto; 
             padding: 15px 10px; 
             flex-direction: column; 
             gap: 15px; 
+            border-bottom: 2px solid var(--gold-primary);
         }
         .logo-img { height: 90px; }
         .main-nav { 
-            flex-wrap: nowrap; /* Garante uma única linha */
+            flex-wrap: nowrap; 
             justify-content: center; 
             gap: 5px; 
             width: 100%;
-            overflow-x: auto; /* Permite scroll horizontal se necessário, mas tenta manter em uma linha */
+            overflow: hidden; /* Remove scroll se possível */
+            border: none !important; /* Garante que não haja bordas extras */
+        }
+        .main-nav li {
+            border: none !important; /* Remove qualquer borda dos itens */
         }
         .main-nav li a { 
-            font-size: 0.75rem; /* Diminui o tamanho da fonte para caber em uma linha */
+            font-size: 0.75rem; 
             padding: 5px 8px; 
             letter-spacing: 0.5px;
+            border: none !important; /* Remove bordas dos links */
         }
         .hero-section h1 { font-size: 2.2rem; }
         .hero-section p { font-size: 1.1rem; }
@@ -590,10 +603,10 @@
                 contato@casamondego.com.br
             </a>
             <div class="social-links">
-                <a href="https://www.instagram.com/casa.mondego/" target="_blank">
+                <a href="https://www.instagram.com/casa.mondego/" target="_blank" class="social-instagram">
                     <svg viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
                 </a>
-                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank">
+                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank" class="social-facebook">
                     <svg viewBox="0 0 320 512"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/></svg>
                 </a>
             </div>
