--- a/index.html
+++ b/index.html
@@ -272,10 +272,13 @@
         text-decoration: none;
         font-weight: bold;
         border-radius: 30px;
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         transition: all 0.3s ease;
         border: 2px solid var(--gold-primary);
         font-size: 0.9rem;
+        text-align: center;
     }
 
     .btn-gold:hover { background-color: transparent; color: var(--gold-primary); }
@@ -402,7 +405,7 @@
 </style>
 
 <link rel='stylesheet' id='google-fonts-css' href='https://fonts.googleapis.com/css?family=Montserrat%3A400%2C700%7CCourgette&display=swap' type='text/css' media='all' />
-<</head>
+</head>
 <body>
 
 
