--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         text-decoration: none;
         font-weight: bold;
         border-radius: 30px;
-        display: flex;
+        display: inline-flex;
         align-items: center;
         justify-content: center;
         transition: all 0.3s ease;
