--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Chocolate</h3>
-                <p>Massa fofinha com cobertura cremosa de chocolate belga.</p>
+                <p>Massa fofinha e super chocolatuda, feita com chocolate de verdade para um sabor intenso e caseiro.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Chocolate." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
