--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Limão Siciliano e Mirtilo</h3>
-                <p>Sofisticado e refrescante com mirtilos frescos.</p>
+                <p>Refrescante e equilibrado, com toque cítrico do limão siciliano e mirtilos frescos na massa.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Limão Siciliano e Mirtilo." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -474,7 +474,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Laranja</h3>
-                <p>O clássico da tarde com suco natural e calda irresistível.</p>
+                <p>Clássico da tarde, preparado com suco de laranja natural para um sabor cítrico suave e molhadinho.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Laranja." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -486,7 +486,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Milho</h3>
-                <p>Cremoso e quentinho feito com milho selecionado.</p>
+                <p>Sabor caseiro, feito com milho selecionado para um sabor autêntico e textura macia.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Milho." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -498,7 +498,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Cenoura</h3>
-                <p>Massa vibrante com cobertura de chocolate que derrete.</p>
+                <p>Massa vibrante e úmida de cenoura fresca, com aquele sabor caseiro que todos adoram.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Cenoura." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -510,7 +510,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Limão</h3>
-                <p>Leve e fofinho com equilíbrio perfeito de sabor.</p>
+                <p>Leve, fofinho e levemente azedinho, com o frescor natural do limão em cada fatia.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Limão." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -522,7 +522,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Aipim</h3>
-                <p>Macio e molhadinho com sabor tradicional irresistível.</p>
+                <p>Macio, molhadinho e cheio de sabor, feito com aipim fresco para um gosto tradicional e acolhedor.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Aipim." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -534,7 +534,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Red Velvet</h3>
-                <p>Elegante e sofisticado com cobertura de cream cheese.</p>
+                <p>Elegante e aveludado, com massa vermelha suave e equilíbrio perfeito de cacau e baunilha.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Red Velvet." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -546,7 +546,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Mesclado</h3>
-                <p>Cenoura e chocolate em perfeita harmonia.</p>
+                <p>A melhor combinação: cenoura e chocolate, intenso em camadas irresistíveis.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Mesclado." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -558,7 +558,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Amendoim</h3>
-                <p>Sabor intenso e caramelizado para os amantes.</p>
+                <p>Sabor intenso de amendoim, com textura macia e um sabor marcante.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Amendoim." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -570,7 +570,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Fubá</h3>
-                <p>Clássico cremoso com textura perfeita e sabor autêntico.</p>
+                <p>Clássico e fofinho, com o sabor autêntico do fubá que lembra a casa da vó.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Fubá." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -582,7 +582,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Formigueiro</h3>
-                <p>Molhadinho e desmancha na boca com cobertura de açúcar.</p>
+                <p>Desmancha na boca, cheio de granulados de chocolate para um crocante delicioso na massa.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Formigueiro." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
